--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "electron ./app",
     "clean": "rm -rf ./dist/osx",
-    "build": "npm run clean && electron-packager ./app \"Ayla\" --out=dist/osx --platform=darwin --arch=x64 --version=1.4.15 --icon=assets/manapot.icns"
+    "build": "npm run clean && electron-packager ./app \"Ayla\" --out=dist/osx --platform=darwin --arch=x64 --electron-version=1.4.15 --icon=assets/manapot.icns"
   },
   "devDependencies": {
     "electron": "^1.4.15",
